tense edits, clean up comments

--- a/Sections/AEP_calc.tex
+++ b/Sections/AEP_calc.tex
@@ -27,8 +27,8 @@ Figure \ref{weibull} shows the wind speed Weibull distributions for two differen
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.4\textwidth]{Figures/weibull_6_53.pdf}\label{653}
-  \includegraphics[width=0.4\textwidth]{Figures/weibull_10_35.pdf}\label{1035}
+  \includegraphics[trim={0 0.7cm 0 0.4cm},clip,width=0.4\textwidth]{Figures/weibull_6_53.pdf}\label{653}
+  \includegraphics[trim={0 0.7cm 0 0.4cm},clip,width=0.4\textwidth]{Figures/weibull_10_35.pdf}\label{1035}
   \caption{\label{weibull} The Weibull wind speed distributions for two different average wind speeds. In (a) there is an average wind speed of 6.53 meters per second, and (b) shows an average wind speed of 10.35 meters per second. The shape factor k in each Weibull distribution is chosen as 1.76.}
 \end{figure}
 
