--- a/Sections/optimization.tex
+++ b/Sections/optimization.tex
@@ -3,7 +3,7 @@ Rather than optimize each turbine, we chose two groups because our previous stud
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.5\textwidth]{Figures/tower_param.pdf}
+  \includegraphics[trim={0 1.5cm 0 2cm},clip,width=0.5\textwidth]{Figures/tower_param.pdf}
   \caption{\label{tower_def} The parameterized turbine tower definition. The tower diameter and shell thickness are defined at the bottom, midpoint, and top of the tower, with the values linearly interpolated in between.}
 \end{figure}
         
@@ -50,7 +50,7 @@ The second wind farm is the Princess Amalia wind farm, a real farm off the coast
 
 \begin{figure}[htbp]
   \centering
-   \includegraphics[width=0.7\textwidth]{Figures/baseline_layouts.pdf}
+   \includegraphics[trim={0 0.5cm 0 0.5cm},clip,width=0.7\textwidth]{Figures/baseline_layouts.pdf}
   \caption{\label{layouts} The two different wind farm designs that were optimized. On the left is a contrived circular wind farm design with 32 turbines. On the right is the Princess Amalia wind farm, an offset grid design with 60 wind turbines. }
 \end{figure}
 %
