--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -1,10 +1,9 @@
-
 Mitigating wake interactions among wind turbines is one of the most difficult challenges in wind farm design. Upstream turbines remove energy from the wind, decreasing the energy available to the rest of the farm. These wake losses often reduce the power production by 10--20\% when compared to unwaked conditions \citep{barthelmie2007modelling,barthelmie2009modelling,briggs2013navigating}. 
 Thus, a major part of wind farm design is predicting and reducing wake interactions among turbines. 
-In this paper, we minimized the cost of energy (COE) of wind farms through layout and turbine design optimization. We give special attention to coupled layout and design optimization, and to wind farms with non-homogeneous turbine designs.
+In this paper, we minimized the cost of energy (COE) of wind farms through layout and turbine design optimization. We gave special attention to coupled design and layout optimization, and to wind farms with non-homogeneous turbine designs.
 To successfully optimize the many variables that come from coupling layout and turbine design, we used exact analytic gradients as opposed to one of the gradient-free optimization methods commonly used in wind farm design.
-Although multi-modal design spaces, like wind farm design spaces, are often well suited for gradient-free algorithms, gradient-based optimization methods can be useful in some cases, such as when using many turbines or when considering more design variables than just turbine design. Even though gradient-free algorithms may be superior in finding global optima compared to gradient-based methods, as the number of design variables in a problem increases, the computational expense for gradient-free optimization methods rises dramatically. 
-For large wind farms gradient-free methods become infeasible, and while gradient-based optimization methods converge to local minima, they scale much better with large problems.
+Although multi-modal design spaces, like wind farm design spaces, are often well suited for gradient-free algorithms, gradient-based optimization methods can be useful in some cases, such as when using many turbines or when considering more design variables than just turbine layout. Even though gradient-free algorithms may be superior in finding global optima compared to gradient-based methods, as the number of design variables in a problem increases, the computational expense for gradient-free optimization methods rises dramatically. 
+For large wind farms gradient-free methods become infeasible, and while gradient-based optimization methods converge to local minima, they scale much better with the number of design variables.
 When considering several design variables or wind farms with many turbines,
 gradient-based optimization with multiple starting points becomes the best, and often only feasible solution method. Rather than limit ourselves to the 9--25 turbines typically used in gradient-free optimization studies, we used gradient-based methods to optimize wind farms of 32--60 wind turbines (with the ability to do more), coupled with as many as 18 additional variables for turbine design.
 
@@ -19,15 +18,15 @@ Also, the number of wake simulations to model a wind farm scales with the square
 Wake steering through turbine yaw control is another method to decrease wake interactions between wind turbines  \citep{Fleming2016,gebraad2017maximization}. Although not considered in this paper, yaw control can be applied to the wind farms in this study for additional improvements.
 
 
-The third method to decrease wake interactions in a wind farm is turbine design. Turbine design is admittedly a broad category, involving a variety of elements. In this paper we will specifically explore heterogeneous hub heights, rotor diameters, turbine ratings, and tower diameters, tower shell thicknesses, and blade chord and twist distributions in the same wind farm. In all, these variables represent a significant portion of wind turbine design and approach complete turbine design. 
+The third method to decrease wake interactions in a wind farm is turbine design. Turbine design is admittedly a broad category, involving a variety of elements. In this paper we specifically explored heterogeneous hub heights, rotor diameters, turbine ratings, and tower diameters, tower shell thicknesses, and blade chord and twist distributions in the same wind farm. In all, these variables represent a significant portion of wind turbine design and approach complete turbine design. 
 In recent years heterogeneous turbine design has begun to receive attention from the research community, and several studies have begun to look into wind farms with mixed turbine designs. Chen et al.~optimized
 a wind farm layout and allowed turbines of different hub heights, finding a power output increase of 13.5\% and a COE decrease of 0.4\% \citep{chen2013wind}. Chowdhury et al.~found
-a 13.1\% increase in power generation in a wind farm with rotor diameter and layout treated as design variables, compared to a wind farm with just optimized layout \citep{chowdhury2010optimizing}. In another study, Chowdhury et al.~found that the capacity factor of a wind farm increases by 6.4\% when the farm is simultaneously optimized for layout and turbine type, with different turbine types in the wind farm, compared to a farm where every turbine is identical \citep{chowdhury2013optimizing}. Chen et al.~also performed a study in which the layout and turbine types are optimized in a wind farm. They found that the optimal wind farms had several different turbine types rather than one type throughout the entire farm \citep{chen2015multi}. In our previous work, we found that wind farms with low wind shear, closely spaced wind turbines, and small rotor diameters can greatly benefit from having turbines with different hub heights. For many of the wind farms that we optimized, wind farms with two different heights had a COE 5--10\% lower than the wind farms with all identical turbine heights \citep{stanley2018}.
+a 13.1\% increase in power generation in a wind farm with rotor diameter and layout treated as design variables, compared to a wind farm with just optimized layout \citep{chowdhury2010optimizing}. In another study, Chowdhury et al.~found that the capacity factor of a wind farm increases by 6.4\% when the farm is simultaneously optimized for layout and turbine type, with different turbine types in the wind farm, compared to a farm where every turbine is identical \citep{chowdhury2013optimizing}. Chen et al.~also performed a study in which the layout and turbine types are optimized in a wind farm. They found that the optimal wind farms had several different turbine types rather than one type throughout the entire farm \citep{chen2015multi}. In our previous work, we found that wind farms with low wind shear, closely spaced wind turbines, and small rotor diameters can greatly benefit from having turbines with different hub heights. For many of the wind farms that we optimized, wind farms with two different heights had an optimal COE that was 5--10\% lower than the wind farms with all identical turbine heights \citep{stanley2018}.
 
-The results of these studies indicate that in many situations, mixing different hub heights, rotor diameters, and turbine types increases the power production in a wind farm and decreases the COE. In this paper, we seek to build on these studies mentioned and others like them.
-We make the following contributions, which are either novel in the field or significant improvements on previous studies.
-First, we include many aspects of turbine design as design variables coupled with turbine layout, rather than select one or two aspects of design or choose from a set of existing turbine models. This allows us to fully explore the design space and discover additional benefits associated with coupled design optimization.
-Second, in this paper we include the cost and structural impacts of changing the turbine design in our optimization objective and constraints.
-Third, we use gradient-based optimization with exact analytic gradients for every aspect of our wind farm model. This allows us to optimize large wind farms and include many design variables, which would be impossible with a gradient-free optimization approach.
-Fourth, we analyze many different wind farm sizes and wind conditions.
-Fifth, we specifically address how sequentially optimizing turbine design then layout compares to fully coupling the design variables.
+The results of these studies indicate that in many situations, mixing different hub heights, rotor diameters, and turbine types increases the power production in a wind farm and decreases the COE. This paper builds on these studies mentioned and others like them.
+We made the following contributions, which are either novel in the field or significant improvements on previous studies.
+First, we included many aspects of turbine design as design variables coupled with turbine layout, rather than select one or two aspects of design or choose from a set of existing turbine models. This allowed us to fully explore the design space and discover additional benefits associated with coupled design optimization.
+Second, in this paper we included the cost and structural impacts of changing the turbine design in our optimization objective and constraints.
+Third, we used gradient-based optimization with exact analytic gradients for every aspect of our wind farm model. This allowed us to optimize large wind farms and include many design variables, which would be impossible with a gradient-free optimization approach.
+Fourth, we analyzed many different wind farm sizes and wind conditions.
+Fifth, we specifically addressed how sequentially optimizing turbine design then layout compares to fully coupling the design variables.
